# AIsystem

./: .gitignore  CLAUDE.md  CODEBASE_INVESTIGATION_INDEX.md  DEVELOP.md  DOCMEE_API文档整理.md  FINDINGS_SUMMARY.txt  ISSUES.md  README.md  REHEARSAL_ANALYSIS.md  lesson-pre.md  openmaic.md  page.md  playback.md  question.md  talk.md  task1.md  task2.md  task3.md  tasks.md  赛题信息.md  阿里云百炼重排序模型API调用说明.md
backend/: .env.example  .gitignore  0.27.0  1.23.0  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start_dev.py
backend/alembic/: env.py
backend/app/: __init__.py  celery.py  main.py  rehearsal_task_dispatcher.py  rehearsal_task_runner.py  rehearsal_tasks.py  tasks.py
backend/chroma_data/: chroma.sqlite3
backend/scripts/: __init__.py  init_db.py  reparse_multimodal_assets.py
backend/tests/: test_all_parsers.py  test_celery_config.py  test_core_imports.py  test_docmee_client.py  test_file_generation.py  test_hybrid_retriever.py  test_lesson_plan_api.py  test_lesson_plan_delete.py  test_libraries_create_defaults.py  test_multimodal_fallback.py  test_multimodal_parser.py  test_ppt_description_helpers.py  test_ppt_download.py  test_ppt_export_helpers.py  test_ppt_genai_provider.py  test_ppt_image_edit_helpers.py  test_ppt_intent_service.py  test_ppt_outline_payload.py  test_ppt_planning_context.py  test_ppt_project_schema_fields.py  test_ppt_renovation.py  test_ppt_slide_editing.py  test_ppt_template_prompt_regressions.py  test_ppt_template_refs.py  test_ppt_template_settings.py  test_real_files.py  test_rehearsal_media_service.py  (+13 more)
(+431 files in other folders)
